--- a/index.html
+++ b/index.html
@@ -3,25 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="/style.css">
-    <script src="/dist/traductorLeet/translate_leet.js"></script>
+    <title>Main</title>
+    <link rel="stylesheet" href="/indexStyle.css">
+    <script src="index.js"></script>
 </head>
 <body>
-    <div class="container" id="translate">
-        <h1>DAY 1</h1>
-        <p>Escribe un programa que reciba un texto y transforme lenguaje natural a
-            "lenguaje hacker" (conocido realmente como "leet" o "1337"). Este lenguaje
-            se caracteriza por sustituir caracteres alfanuméricos.
-            Utiliza esta tabla (https://www.gamehouse.com/blog/leet-speak-cheat-sheet/) 
-            con el alfabeto y los números en "leet".
-            (Usa la primera opción de cada transformación. Por ejemplo "4" para la "a")</p>
-            <form id="translator">
-                <label class="label" for="toTranslate">Palabra a traducir</label><br>
-                <input type="text" id="toTranslate" name="toTranslate"><br>
-                <button type="button" id="btnSubmit">Translate</button>
-            </form>
-            <p id="txt"></p>
+    <h1 id="title">Retos diarios</h1>
+    <div class="btnsMain">
+        <input type="button" id="challenge1" value="Day 1">
+        <input type="button" id="challenge2" value="Day 2">
     </div>
 </body>
 </html>
