challenge 3: password generator

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div class="btnsMain">
         <input type="button" id="challenge1" value="Day 1">
         <input type="button" id="challenge2" value="Day 2">
+        <input type="button" id="challenge3" value="Day 3">
     </div>
 </body>
 </html>
