--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <input type="button" id="challenge1" value="Day 1">
         <input type="button" id="challenge2" value="Day 2">
         <input type="button" id="challenge3" value="Day 3">
+        <input type="button" id="challenge4" value="Day 4">
     </div>
 </body>
 </html>
