--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <input type="button" id="challenge2" value="Day 2">
         <input type="button" id="challenge3" value="Day 3">
         <input type="button" id="challenge4" value="Day 4">
+        <input type="button" id="challenge5" value="Day 5">
     </div>
 </body>
 </html>
