challenge 6: sorting hat

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <input type="button" id="challenge3" value="Day 3">
         <input type="button" id="challenge4" value="Day 4">
         <input type="button" id="challenge5" value="Day 5">
+        <input type="button" id="challenge6" value="Day 6">
     </div>
 </body>
 </html>
